arkts_static_test/04_Names_Declarations_Scopes/ets_cases/4.6.1_Variable_Declarations/compile-pass/NAM_04_06_01_001_PASS_VAR_WITH_TYPE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id NAM_04_06_01_001_PASS_VAR_WITH_TYPE
 * @expect compile-pass
 * @section 4.6.1
 * @design 变量声明带类型注解
 * @note 正向用例：验证 let 带类型注解编译通过
 */
let a: number = 1;
